# udemy-api

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  decorator.py  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt  sample.env  schema.yml
apps/base/: defaults.py  managers.py  models.py
apps/category/: admin.py  models.py  serializer.py  serializers.py  urls.py  views.py
apps/category/migrations/: 0001_initial.py  0002_alter_category_options.py  0003_remove_category_slug.py  0004_category_parent.py
apps/orders/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_alter_order_status.py
apps/products/: admin.py  models.py  paginations.py  permissions.py  serializer.py  serializers.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py  0002_product_category.py  0003_remove_product_slug_alter_product_category.py  0004_rename_product_product_name.py
apps/products/tests/: models_test.py  test_models.py  test_views.py
apps/reviews/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
apps/reviews/migrations/: 0001_initial.py  0002_initial.py  0003_rename_name_review_product.py  0004_alter_review_product.py
apps/users/: admin.py  emails.py  models.py  serializer.py  tasks.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_user_is_verified.py  0003_user_otp.py
scripts/: check_service.py  docker-entrypoint.sh
udemy/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+3 files in other folders)
