[build-system]
requires = ["poetry-core>=1.0.0", "pip-shims"]
build-backend = "poetry.core.masonry.api"

# Example configuration for Black.

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
